force-app/main/default/objects/SEL_Batch__c/SEL_Batch__c.object-meta.xml
<CustomObject>
    <label>Batch</label>
    <nameField>
        <displayFormat>BAT{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>