force-app/main/default/objects/SEL_Batch__c/fields/SEL_BatchTemplate__c.field-meta.xml
<CustomField>
    <fullName>SEL_BatchTemplate__c</fullName>
    <label>Batch Template</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>