force-app/main/default/objects/SEL_Batch__c/fields/SEL_Duration__c.field-meta.xml
<CustomField>
    <fullName>SEL_Duration__c</fullName>
    <formula>(SEL_Stop__c - SEL_Start__c) * 24 * 60 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>