force-app/main/default/objects/SEL_Batch__c/fields/SEL_Start__c.field-meta.xml
<CustomField>
    <fullName>SEL_Start__c</fullName>
    <label>Start</label>
    <summarizedField>SEL_BatchStep__c.SEL_Start__c</summarizedField>
    <summaryForeignKey>SEL_BatchStep__c.SEL_BatchId__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>