force-app/main/default/objects/SEL_Batch__c/fields/SEL_Status__c.field-meta.xml
<CustomField>
    <fullName>SEL_Status__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SEL_BatchStatus</valueSetName>
    </valueSet>
</CustomField>