force-app/main/default/objects/SEL_Batch__c/fields/SEL_Stop__c.field-meta.xml
<CustomField>
    <fullName>SEL_Stop__c</fullName>
    <label>Stop</label>
    <summarizedField>SEL_BatchStep__c.SEL_Stop__c</summarizedField>
    <summaryForeignKey>SEL_BatchStep__c.SEL_BatchId__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>