force-app/main/default/objects/SEL_Batch__c/fields/SPEN_AdqmLoadDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AdqmLoadDate__c</fullName>
    <description>This field is used by the ADQM Delta Sync process.</description>
    <inlineHelpText>The created date to process.</inlineHelpText>
    <label>ADQM Load Date</label>
    <type>Date</type>
</CustomField>