force-app/main/default/objects/SEL_Batch__c/recordTypes/SPEN_AdqmDeltaSync.recordType-meta.xml
<RecordType>
    <fullName>SPEN_AdqmDeltaSync</fullName>
    <active>true</active>
    <label>ADQM Delta Sync</label>
</RecordType>