force-app/main/default/objects/SEL_Batch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SEL_BatchTemplate__c</columns>
    <columns>SEL_Status__c</columns>
    <columns>SEL_Duration__c</columns>
    <columns>SPEN_AdqmLoadDate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>